Finish generating TOCs [skip ci]

--- a/src/Notes/ComputerScience/WebDev/React/Conditional Rendering.html
+++ b/src/Notes/ComputerScience/WebDev/React/Conditional Rendering.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Conditional Rendering.html#Short%20Circuit%20Evlauation">Short Circuit Evlauation</a>
+
+</li><li>
+<a href="Conditional Rendering.html#Ternary%20operators">Ternary operators</a>
+
+</li></ul>
+<hr>
+
 <p>
 In the following example we show how we can have <code>React</code> display different elements conditionally:
 </p>
