--- a/src/Notes/ComputerScience/WebDev/React/Controlled Inputs.html
+++ b/src/Notes/ComputerScience/WebDev/React/Controlled Inputs.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Controlled Inputs.html#Multiple%20inputs">Multiple inputs</a>
+
+</li></ul>
+<hr>
+
 <p>
 Let's see how to handle inputs in a form using <code>React</code>:
 </p>
