--- a/src/Notes/ComputerScience/WebDev/React/Performance Optimization.html
+++ b/src/Notes/ComputerScience/WebDev/React/Performance Optimization.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Performance Optimization.html#React.memo">React memo</a>
+
+</li><li>
+<a href="Performance Optimization.html#useCallback">useCallback</a>
+
+</li><li>
+<a href="Performance Optimization.html#useMemo">useMemo</a>
+
+</li></ul>
+<hr>
+
 <p>
 Even though <code>React</code> is fast by default (you do not need to use it), we can use different optimization techniques (mind, they do add their own cost):
 </p>
