--- a/src/Notes/ComputerScience/WebDev/React/React Router.html
+++ b/src/Notes/ComputerScience/WebDev/React/React Router.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="React Router.html#Links">Links</a>
+
+</li></ul>
+<hr>
+
 <p>
 In <code>React</code> routing behaves differently than in traditional <code>HTML</code> applications:
 </p>
