--- a/src/Notes/ComputerScience/WebDev/Spring/AOP/Before Advice.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/AOP/Before Advice.html
@@ -38,6 +38,26 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Before Advice.html#Add%20Dependencies">Add Dependencies</a>
+
+</li><li>
+<a href="Before Advice.html#Create%20Target%20Object">Create Target Object</a>
+
+</li><li>
+<a href="Before Advice.html#Spring%20Configuration">Spring Configuration</a>
+
+</li><li>
+<a href="Before Advice.html#Create%20Aspect%20with%20%40Before">Create Aspect with  Before</a>
+
+</li><li>
+<a href="Before Advice.html#Main%20App">Main App</a>
+
+</li></ul>
+<hr>
+
 <p>
 We use the tag <code>@Before</code> to execute some code before we call the target object function:
 </p>
