--- a/src/Notes/ComputerScience/WebDev/Spring/AOP/Control Aspect Order.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/AOP/Control Aspect Order.html
@@ -38,6 +38,23 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Control Aspect Order.html#Refactor%20and%20Order">Refactor and Order</a>
+
+</li><li>
+<a href="Control Aspect Order.html#Log%20to%20Cloud%20Aspect">Log to Cloud Aspect</a>
+
+</li><li>
+<a href="Control Aspect Order.html#Logging%20Aspect">Logging Aspect</a>
+
+</li><li>
+<a href="Control Aspect Order.html#Analytics%20Aspect">Analytics Aspect</a>
+
+</li></ul>
+<hr>
+
 <p>
 How do we control the order of advices being applied when they all match the pointcut expressions?
 </p>
