--- a/src/Notes/ComputerScience/WebDev/Spring/AOP/Pointcut Declarations.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/AOP/Pointcut Declarations.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Pointcut Declarations.html#Create%20Pointcut%20Declaration">Create Pointcut Declaration</a>
+
+</li><li>
+<a href="Pointcut Declarations.html#Reuse%20Pointcut%20Declaration">Reuse Pointcut Declaration</a>
+
+</li><li>
+<a href="Pointcut Declarations.html#Combine%20Pointcut%20Declarations">Combine Pointcut Declarations</a>
+
+</li></ul>
+<hr>
+
 <p>
 How can we reuse a pointcut expression? We need to:
 </p>
