--- a/src/Notes/ComputerScience/WebDev/Spring/Bean Scopes/Life Cycle.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Bean Scopes/Life Cycle.html
@@ -38,6 +38,23 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Life Cycle.html#Define%20Methods">Define Methods</a>
+
+</li><li>
+<a href="Life Cycle.html#Configure%20Hooks%20in%20the%20Configuration%20File">Configure Hooks in the Configuration File</a>
+
+</li><li>
+<a href="Life Cycle.html#Main%20Method">Main Method</a>
+
+</li><li>
+<a href="Life Cycle.html#Notes">Notes</a>
+
+</li></ul>
+<hr>
+
 <p>
 The bean life cycle is as follows:
 </p>
