--- a/src/Notes/ComputerScience/WebDev/Spring/Bean Scopes/Scope.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Bean Scopes/Scope.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Scope.html#Intro">Intro</a>
+
+</li><li>
+<a href="Scope.html#Specify%20Scope%20in%20XML%20Config%20File">Specify Scope in XML Config File</a>
+
+</li><li>
+<a href="Scope.html#Main%20Method">Main Method</a>
+
+</li></ul>
+<hr>
+
 <div id="Bean Scopes-Intro"><h2 id="Intro" class="header"><a href="#Bean Scopes-Intro">Intro</a></h2></div>
 
 <p>
