--- a/src/Notes/ComputerScience/WebDev/Spring/Dependency Injection/Constructor Injection.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Dependency Injection/Constructor Injection.html
@@ -38,6 +38,23 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Constructor Injection.html#Create%20Dependency%20Object">Create Dependency Object</a>
+
+</li><li>
+<a href="Constructor Injection.html#Establish%20Dependency">Establish Dependency</a>
+
+</li><li>
+<a href="Constructor Injection.html#Configuration%20File">Configuration File</a>
+
+</li><li>
+<a href="Constructor Injection.html#Main%20Method">Main Method</a>
+
+</li></ul>
+<hr>
+
 <p>
 Now we will show an example where the <code>BaseballCoach</code> has <code>FortuneService</code> as a dependency. So, first we create the dependency interface as follows:
 </p>
