--- a/src/Notes/ComputerScience/WebDev/Spring/Dependency Injection/Inject Values From a Properties File.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Dependency Injection/Inject Values From a Properties File.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Inject Values From a Properties File.html#Create%20the%20properties%20file">Create the properties file</a>
+
+</li><li>
+<a href="Inject Values From a Properties File.html#Load%20the%20properties%20file">Load the properties file</a>
+
+</li><li>
+<a href="Inject Values From a Properties File.html#Main%20Method">Main Method</a>
+
+</li></ul>
+<hr>
+
 <div id="Inject Values from the Properties Files-Create the properties file"><h3 id="Create the properties file" class="header"><a href="#Inject Values from the Properties Files-Create the properties file">Create the properties file</a></h3></div>
 
 <p>
