--- a/src/Notes/ComputerScience/WebDev/Spring/Hibernate/Database Operations.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Hibernate/Database Operations.html
@@ -38,6 +38,26 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Database Operations.html#Save%20Java%20Object">Save Java Object</a>
+
+</li><li>
+<a href="Database Operations.html#Read%20Java%20Object">Read Java Object</a>
+
+</li><li>
+<a href="Database Operations.html#Query%20Java%20Object">Query Java Object</a>
+
+</li><li>
+<a href="Database Operations.html#Update%20Java%20Objects">Update Java Objects</a>
+
+</li><li>
+<a href="Database Operations.html#Delete%20Java%20Objects">Delete Java Objects</a>
+
+</li></ul>
+<hr>
+
 <div id="Database Operations-Save Java Object"><h2 id="Save Java Object" class="header"><a href="#Database Operations-Save Java Object">Save Java Object</a></h2></div>
 
 <p>
