--- a/src/Notes/ComputerScience/WebDev/Spring/Hibernate/Eager vs Lazy Loading.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Hibernate/Eager vs Lazy Loading.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Eager vs Lazy Loading.html#Default%20Fetch%20Types">Default Fetch Types</a>
+
+</li><li>
+<a href="Eager vs Lazy Loading.html#Specify%20Fetch%20Type%20on%20Entity">Specify Fetch Type on Entity</a>
+
+</li><li>
+<a href="Eager vs Lazy Loading.html#Avoid%20Closed%20Session%20Exception">Avoid Closed Session Exception</a>
+
+</li></ul>
+<hr>
+
 <ul>
 <li>
 Eager: fetches all data all at once (with dependencies of the entity)
