--- a/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Dependency Injection.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Dependency Injection.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Dependency Injection.html#Which%20dependency%20to%20use">Which dependency to use</a>
+
+</li></ul>
+<hr>
+
 <p>
 We will introduce dependency injection with annotation using autowiring:
 </p>
