--- a/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Field Injection.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Field Injection.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Field Injection.html#Define%20Dependency%20as%20Component">Define Dependency as Component</a>
+
+</li><li>
+<a href="Field Injection.html#Specify%20Dependency">Specify Dependency</a>
+
+</li></ul>
+<hr>
+
 <p>
 Field Injection allows you to inject dependencies by setting field values on your class directly (even private ones). This is accomplished by using <code>Java Reflection</code>.
 </p>
