--- a/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Inject using Properties File.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Inject using Properties File.html
@@ -36,6 +36,22 @@
 
 <div id="Inject properties file using Java annotations"><h1 id="Inject properties file using Java annotations" class="header"><a href="#Inject properties file using Java annotations">Inject properties file using Java annotations</a></h1></div>
 
+<hr>
+
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Inject using Properties File.html#Create%20a%20properties%20file">Create a properties file</a>
+
+</li><li>
+<a href="Inject using Properties File.html#Load%20the%20properties">Load the properties</a>
+
+</li><li>
+<a href="Inject using Properties File.html#Inject%20Values">Inject Values</a>
+
+</li></ul>
+<hr>
+
 <p>
 This solution will show you how inject values from a properties file using annotations. The values will no longer be hard coded in the Java code.
 </p>
