--- a/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Method Injection.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Method Injection.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Method Injection.html#Define%20Dependency%20as%20Component">Define Dependency as Component</a>
+
+</li><li>
+<a href="Method Injection.html#Specify%20Dependency">Specify Dependency</a>
+
+</li></ul>
+<hr>
+
 <p>
 One thing to note is that you can add dependency injection on any method you want, does not have to be a setter method:
 </p>
