--- a/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Qualifier Annotation.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Qualifier Annotation.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Qualifier Annotation.html#Define%20Dependency%20as%20Component">Define Dependency as Component</a>
+
+</li><li>
+<a href="Qualifier Annotation.html#Specify%20Dependency">Specify Dependency</a>
+
+</li><li>
+<a href="Qualifier Annotation.html#Qualifier%20in%20Constructor">Qualifier in Constructor</a>
+
+</li></ul>
+<hr>
+
 <p>
 In order to specify which specific implementation of an interface we want to use, when this interface is implemented by several beans, then we use the <code>Qualifier</code> annotation.
 </p>
