--- a/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Setter Injection.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Setter Injection.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Setter Injection.html#Define%20Dependency%20as%20Component">Define Dependency as Component</a>
+
+</li><li>
+<a href="Setter Injection.html#Specify%20Dependency">Specify Dependency</a>
+
+</li></ul>
+<hr>
+
 <div id="Setter Injection-Define Dependency as Component"><h2 id="Define Dependency as Component" class="header"><a href="#Setter Injection-Define Dependency as Component">Define Dependency as Component</a></h2></div>
 
 <pre java="">package com.springdemo;
