--- a/src/Notes/ComputerScience/WebDev/Spring/Java Configuration/Configuration With Java.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Configuration/Configuration With Java.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Configuration With Java.html#Create%20Configuration%20Class">Create Configuration Class</a>
+
+</li><li>
+<a href="Configuration With Java.html#Load%20the%20Configuration%20Class">Load the Configuration Class</a>
+
+</li></ul>
+<hr>
+
 <div id="Configuration With Java-Create Configuration Class"><h2 id="Create Configuration Class" class="header"><a href="#Configuration With Java-Create Configuration Class">Create Configuration Class</a></h2></div>
 
 <pre java="">package com.springdemo;
