--- a/src/Notes/ComputerScience/WebDev/Spring/Java Configuration/Inversion of Control.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Configuration/Inversion of Control.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Inversion of Control.html#Create%20the%20Bean">Create the Bean</a>
+
+</li><li>
+<a href="Inversion of Control.html#Define%20the%20Bean%20in%20the%20Configuration%20Class">Define the Bean in the Configuration Class</a>
+
+</li><li>
+<a href="Inversion of Control.html#Main%20Method">Main Method</a>
+
+</li></ul>
+<hr>
+
 <p>
 To define a bean, we now use our configuration class:
 </p>
