--- a/src/Notes/ComputerScience/WebDev/Spring/Java Configuration/Load Properties from File.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Configuration/Load Properties from File.html
@@ -36,6 +36,22 @@
 
 <div id="Load Properties from File"><h1 id="Load Properties from File" class="header"><a href="#Load Properties from File">Load Properties from File</a></h1></div>
 
+<hr>
+
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Load Properties from File.html#Create%20the%20File">Create the File</a>
+
+</li><li>
+<a href="Load Properties from File.html#Load%20the%20File">Load the File</a>
+
+</li><li>
+<a href="Load Properties from File.html#Inject%20Values">Inject Values</a>
+
+</li></ul>
+<hr>
+
 <p>
 In order to inject values read from a properties file we do the following:
 </p>
