--- a/src/Notes/ComputerScience/WebDev/Spring/MVC/Adding Data.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/MVC/Adding Data.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Adding Data.html#Example">Example</a>
+
+</li><li>
+<a href="Adding Data.html#Controller">Controller</a>
+
+</li><li>
+<a href="Adding Data.html#View">View</a>
+
+</li></ul>
+<hr>
+
 <p>
 The Model is a container for the application data. So in your controller you can put anything in the model (strings, objects, info from DB, etc). And then you view page (<code>JSP</code>) can access data from the model.
 </p>
