--- a/src/Notes/ComputerScience/WebDev/Spring/MVC/Form Validation.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/MVC/Form Validation.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Form Validation.html#Set%20up">Set up</a>
+
+</li></ul>
+<hr>
+
 <p>
 Java has a standard <code>Bean Validation API</code> that defines a metadata model and an <code>API</code> for entity validation.
 </p>
