--- a/src/Notes/ComputerScience/WebDev/Spring/MVC/Handle String in Integer Field.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/MVC/Handle String in Integer Field.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Handle String in Integer Field.html#Create%20a%20custom%20message">Create a custom message</a>
+
+</li><li>
+<a href="Handle String in Integer Field.html#Specify%20Properties%20file%20in%20Configuration">Specify Properties file in Configuration</a>
+
+</li></ul>
+<hr>
+
 <p>
 If we want to avoid the trace returned by errors like inputting the wrong data type (string instead of int), we can define a custom message that will override those messages.
 </p>
