--- a/src/Notes/ComputerScience/WebDev/Spring/MVC/Number Validation.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/MVC/Number Validation.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Number Validation.html#Add%20Validation%20Rule%20to%20Bean">Add Validation Rule to Bean</a>
+
+</li><li>
+<a href="Number Validation.html#Perform%20Validation%20in%20the%20Controller">Perform Validation in the Controller</a>
+
+</li><li>
+<a href="Number Validation.html#Display%20error%20on%20HTML">Display error on HTML</a>
+
+</li></ul>
+<hr>
+
 <p>
 In this section we will show how to perform a <code>number range</code> validation.
 </p>
