--- a/src/Notes/ComputerScience/WebDev/Spring/MVC/Radio Buttons.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/MVC/Radio Buttons.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Radio Buttons.html#Controller">Controller</a>
+
+</li><li>
+<a href="Radio Buttons.html#View">View</a>
+
+</li><li>
+<a href="Radio Buttons.html#Model">Model</a>
+
+</li></ul>
+<hr>
+
 <p>
 To pass and bind data from radio buttons to controllers an another views we use the <code>Form Tag</code> <code>form:radiobutton</code> which is surrounded by a <code>form:form</code>:
 </p>
