--- a/src/Notes/ComputerScience/WebDev/Spring/MVC/Read HTML Form Data.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/MVC/Read HTML Form Data.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Read HTML Form Data.html#Controller">Controller</a>
+
+</li><li>
+<a href="Read HTML Form Data.html#View">View</a>
+
+</li></ul>
+<hr>
+
 <p>
 The flow of our example will be the following:
 </p>
