--- a/src/Notes/ComputerScience/WebDev/Spring/Maven/POM File Structure.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Maven/POM File Structure.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="POM File Structure.html#Project%20Coordinates">Project Coordinates</a>
+
+</li><li>
+<a href="POM File Structure.html#Dependency%20Coordinates">Dependency Coordinates</a>
+
+</li><li>
+<a href="POM File Structure.html#Find%20Dependencies">Find Dependencies</a>
+
+</li></ul>
+<hr>
+
 <p>
 The POM File has the following structure:
 </p>
