--- a/src/Notes/ComputerScience/WebDev/Spring/Security/Basic Security.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Security/Basic Security.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Basic Security.html#Create%20Security%20Spring%20Initializer">Create Security Spring Initializer</a>
+
+</li><li>
+<a href="Basic Security.html#Create%20Spring%20Security%20Configuration%20%28%40Configuration%29">Create Spring Security Configuration   Configuration</a>
+
+</li><li>
+<a href="Basic Security.html#Add%20users%2C%20passwords%20and%20roles">Add users  passwords and roles</a>
+
+</li></ul>
+<hr>
+
 <div id="Basic Security-Create Security Spring Initializer"><h2 id="Create Security Spring Initializer" class="header"><a href="#Basic Security-Create Security Spring Initializer">Create Security Spring Initializer</a></h2></div>
 
 <p>
