--- a/src/Notes/ComputerScience/WebDev/Spring/Security/Cross Site Request Forgery.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Security/Cross Site Request Forgery.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Cross Site Request Forgery.html#How%20to%20see%20the%20CSRF%20token%3F">How to see the CSRF token</a>
+
+</li></ul>
+<hr>
+
 <p>
 Spring Security protects against Cross-Site Request Forgery. CSRF is a security attack where a website tricks you into executing an action on a web application that you are currently logged in. Protection from this type of attack is embedded in the Spring Security Filters.
 </p>
