--- a/src/Notes/ComputerScience/WebDev/Spring/Security/Display User and Roles.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Security/Display User and Roles.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Display User and Roles.html#Add%20JSP%20Tag%20library%20as%20dependency">Add JSP Tag library as dependency</a>
+
+</li><li>
+<a href="Display User and Roles.html#JSP%20page">JSP page</a>
+
+</li></ul>
+<hr>
+
 <p>
 In this section we are going to show how to display in our <code>jsp</code> files the user id and its role:
 </p>
