--- a/src/Notes/ComputerScience/WebDev/Spring/Security/Java Configuration.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Security/Java Configuration.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Java Configuration.html#Web%20App%20Initializer">Web App Initializer</a>
+
+</li></ul>
+<hr>
+
 <p>
 We are going to show the <code>DemoAppConfig.java</code> that holds the base configuration of our application:
 </p>
