--- a/src/Notes/ComputerScience/WebDev/Spring/Security/Log Out.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Security/Log Out.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Log Out.html#Configuration">Configuration</a>
+
+</li><li>
+<a href="Log Out.html#Log%20Out%20Button">Log Out Button</a>
+
+</li></ul>
+<hr>
+
 <p>
 We are going to show in this section how to add the logout functionality to our Spring application.
 </p>
