--- a/src/Notes/ComputerScience/WebDev/Spring/Spring Rest/Exception Handling.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Spring Rest/Exception Handling.html
@@ -38,6 +38,23 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Exception Handling.html#Create%20Error%20Response%20Class">Create Error Response Class</a>
+
+</li><li>
+<a href="Exception Handling.html#Create%20Exception%20Class">Create Exception Class</a>
+
+</li><li>
+<a href="Exception Handling.html#Rest%20Service%20with%20Exception">Rest Service with Exception</a>
+
+</li><li>
+<a href="Exception Handling.html#Global%20Exception%20Handler">Global Exception Handler</a>
+
+</li></ul>
+<hr>
+
 <p>
 In this section we are going to show how to create an error page to display when there is an error on a request.
 </p>
