--- a/src/Notes/ComputerScience/WebDev/Spring/Spring Rest/JSON Data Binding.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Spring Rest/JSON Data Binding.html
@@ -38,6 +38,26 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="JSON Data Binding.html#Set%20Up">Set Up</a>
+
+</li><li>
+<a href="JSON Data Binding.html#Create%20POJO%20Class">Create POJO Class</a>
+
+</li><li>
+<a href="JSON Data Binding.html#Main%20App">Main App</a>
+
+</li><li>
+<a href="JSON Data Binding.html#Nested%20Objects">Nested Objects</a>
+
+</li><li>
+<a href="JSON Data Binding.html#Ignore%20Unknwon%20Properties">Ignore Unknwon Properties</a>
+
+</li></ul>
+<hr>
+
 <p>
 Data binding is the process of converting JSON data to a Java POJO (the conversion goes both ways)
 </p>
