--- a/src/Notes/ComputerScience/WebDev/Spring/Spring Rest/POJOs as JSON.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Spring Rest/POJOs as JSON.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="POJOs as JSON.html#Create%20POJO">Create POJO</a>
+
+</li><li>
+<a href="POJOs as JSON.html#Create%20Service">Create Service</a>
+
+</li></ul>
+<hr>
+
 <p>
 To test converting POJOs to JSON we are going to create a service that allows us to retrieve a list of students:
 </p>
