--- a/src/Notes/ComputerScience/WebDev/Spring/Spring Rest/Spring Rest Controller.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Spring Rest/Spring Rest Controller.html
@@ -38,6 +38,26 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Spring Rest Controller.html#Hello%20World">Hello World</a>
+
+</li><li>
+<a href="Spring Rest Controller.html#Configuration">Configuration</a>
+
+</li><li>
+<a href="Spring Rest Controller.html#General">General</a>
+
+</li><li>
+<a href="Spring Rest Controller.html#Servlet%20Initializer">Servlet Initializer</a>
+
+</li><li>
+<a href="Spring Rest Controller.html#Controller">Controller</a>
+
+</li></ul>
+<hr>
+
 <p>
 Spring Web MVC provides support for Spring REST. For that we use a new annotation called <code>RestController</code> which is an extension of <code>Controller</code> and handles REST requests and responses. 
 </p>
