--- a/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Application Properties.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Application Properties.html
@@ -38,6 +38,29 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Application Properties.html#Configuring%20the%20Spring%20Boot%20Server">Configuring the Spring Boot Server</a>
+
+</li><li>
+<a href="Application Properties.html#Core">Core</a>
+
+</li><li>
+<a href="Application Properties.html#Web">Web</a>
+
+</li><li>
+<a href="Application Properties.html#Actuator%20Properties">Actuator Properties</a>
+
+</li><li>
+<a href="Application Properties.html#Security">Security</a>
+
+</li><li>
+<a href="Application Properties.html#Data%20Properties">Data Properties</a>
+
+</li></ul>
+<hr>
+
 <p>
 By default Spring Boot reads information from a standard properties file in <code>src/main/resources/application.properties</code>. You can define any custom properties in this file and your app can access properties using the annotation <code>@Value</code>(<a href="../Java Configuration/Load Properties from File.html">We have done this before</a>).
 </p>
