--- a/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Spring Boot Actuator.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Spring Boot Actuator.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Spring Boot Actuator.html#Add%20security">Add security</a>
+
+</li></ul>
+<hr>
+
 <p>
 Spring Boot Actuator automatically exposes endpoints to monitor and manage your application. You only need to add the dependency to you <code>pom.xml</code> file:
 </p>
