--- a/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Spring Boot Project Structure.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Spring Boot Project Structure.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Spring Boot Project Structure.html#Application%20Properties">Application Properties</a>
+
+</li><li>
+<a href="Spring Boot Project Structure.html#Static%20Content">Static Content</a>
+
+</li><li>
+<a href="Spring Boot Project Structure.html#Testing">Testing</a>
+
+</li></ul>
+<hr>
+
 <div id="Spring Boot Project Structure-Application Properties"><h2 id="Application Properties" class="header"><a href="#Spring Boot Project Structure-Application Properties">Application Properties</a></h2></div>
 
 <p>
