--- a/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Spring Boot Starters.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Spring Boot Starters.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Spring Boot Starters.html#Spring%20Boot%20Starter%20Parent">Spring Boot Starter Parent</a>
+
+</li></ul>
+<hr>
+
 <p>
 Spring Boot Staters offer a curated list of dependencies that are grouped together and tested by the Spring Development Team. 
 </p>
