--- a/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Spring Data JPA.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Spring Data JPA.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Spring Data JPA.html#Create%20Repository">Create Repository</a>
+
+</li><li>
+<a href="Spring Data JPA.html#Use%20Repository">Use Repository</a>
+
+</li></ul>
+<hr>
+
 <p>
 With JPA API we created a <a href="JPA.html">Employee DAO</a>, however what if we need to create one for each entity we manage. Then we would duplicate a lot of code, because the calls to the API are basically the same. 
 </p>
