--- a/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Spring Data REST.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/SpringBoot/Spring Data REST.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Spring Data REST.html#Configuration">Configuration</a>
+
+</li><li>
+<a href="Spring Data REST.html#Sorting">Sorting</a>
+
+</li></ul>
+<hr>
+
 <p>
 What if we want to <a href="Spring Data JPA.html">also</a> reduce the code for creating API, that is, what if Spring could create a REST API for us using our <code>JPARepository</code>, such that it would expose all of the basic REST API CRUD features automatically.
 </p>
