--- a/src/Notes/DataScience/ML/StanfordCoursera/DimensionalityReduction/Dimensionality Reduction.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/DimensionalityReduction/Dimensionality Reduction.html
@@ -38,6 +38,47 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Dimensionality Reduction.html#Standardize%20Data">Standardize Data</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#PCA">PCA</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#Find%20Underlying%20Space">Find Underlying Space</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#Represent%20the%20Subspace">Represent the Subspace</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#Algorithm%20Layout">Algorithm Layout</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#Performing%20Eigen-decomposition">Performing Eigen-decomposition</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#Large%20Datasets">Large Datasets</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#Rephrasing%20PCA">Rephrasing PCA</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#ICA">ICA</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#Intuition">Intuition</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#Solution">Solution</a>
+
+</li><li>
+<a href="Dimensionality Reduction.html#Intuition">Intuition</a>
+
+</li></ul>
+<hr>
+
 <p>
 Given examples \(\{x^{(i)}\}_{i=1}^n\) where \(x^{(i)} \in \mathbb{R}^d\), we want to find out if our data lives is a low dimensional space. Look at the next example:
 </p>
