--- a/src/Notes/DataScience/ML/StanfordCoursera/Evaluación de modelos.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/Evaluación de modelos.html
@@ -38,6 +38,50 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Evaluación de modelos.html#Separaci%F3n%20de%20datos">Separaci n de datos</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Entrenamiento%20en%20regresi%F3n%20lineal">Entrenamiento en regresi n lineal</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Entrenamiento%20en%20regresi%F3n%20log%EDstica">Entrenamiento en regresi n log stica</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Selecci%F3n%20de%20modelos">Selecci n de modelos</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Cross%20Validation">Cross Validation</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Proceso%20de%20selecci%F3n">Proceso de selecci n</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Diagn%F3stico%3A%20Sesgo%20vs%20Varianza">Diagn stico  Sesgo vs Varianza</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Regresi%F3n%20lineal%20con%20regularizaci%F3n">Regresi n lineal con regularizaci n</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Escoger%20el%20par%E1metro%20de%20regularizaci%F3n">Escoger el par metro de regularizaci n</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Curva%20de%20aprendizaje">Curva de aprendizaje</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Debugging%20un%20algoritmo%20de%20aprendizaje">Debugging un algoritmo de aprendizaje</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Medidas%20de%20evaluaci%F3n">Medidas de evaluaci n</a>
+
+</li><li>
+<a href="Evaluación de modelos.html#Balance%20entre%20precisi%F3n%20y%20recall">Balance entre precisi n y recall</a>
+
+</li></ul>
+<hr>
+
 <div id="Evaluación de modelos-Separación de datos"><h2 id="Separación de datos" class="header"><a href="#Evaluación de modelos-Separación de datos">Separación de datos</a></h2></div>
 
 <p>
