--- a/src/Notes/DataScience/ML/StanfordCoursera/ExpectationMaximization/Expectation-Maximization Algorithms.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/ExpectationMaximization/Expectation-Maximization Algorithms.html
@@ -38,6 +38,74 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Expectation-Maximization Algorithms.html#Introduction">Introduction</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Gaussian%20Mixture%20Models">Gaussian Mixture Models</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#EM%20Algorithm%20with%20GMM%27s">EM Algorithm with GMM s</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#E-Step">E-Step</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#M-Step">M-Step</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Optimal%20Parameters%20of%20a%20GMM">Optimal Parameters of a GMM</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Iterative%20Process">Iterative Process</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Recap%3A%20Anomaly%20Detection">Recap  Anomaly Detection</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Generalized%20EM%20Algorithm">Generalized EM Algorithm</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Jensen%27s%20Inequality">Jensen s Inequality</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Convex%20function">Convex function</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Concave%20function">Concave function</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Some%20Intuition">Some Intuition</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Motivation">Motivation</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#E-Step">E-Step</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#M-Step">M-Step</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Make%20Log%20Likelihood%20and%20Lower%20Bound%20Equal%20on%20Theta">Make Log Likelihood and Lower Bound Equal on Theta</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Putting%20Everything%20Together">Putting Everything Together</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#Derive%20EM%20for%20GMM%20from%20the%20Generalized%20Algorithm">Derive EM for GMM from the Generalized Algorithm</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#E-Step">E-Step</a>
+
+</li><li>
+<a href="Expectation-Maximization Algorithms.html#M-Step">M-Step</a>
+
+</li></ul>
+<hr>
+
 <div id="Expectation Maximization-Introduction"><h2 id="Introduction" class="header"><a href="#Expectation Maximization-Introduction">Introduction</a></h2></div>
 
 <p>
