--- a/src/Notes/DataScience/ML/StanfordCoursera/Grandes Datasets.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/Grandes Datasets.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Grandes Datasets.html#Stochastic%20Gradient%20Descent">Stochastic Gradient Descent</a>
+
+</li><li>
+<a href="Grandes Datasets.html#Mini%20Batch%20Gradient%20Descent">Mini Batch Gradient Descent</a>
+
+</li></ul>
+<hr>
+
 <p>
 Cuando los conjuntos de datos son muy grandes los algoritmos son computacionalmente más caros:
 </p>
