--- a/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Anexo/Derivada de la función de coste.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Anexo/Derivada de la función de coste.html
@@ -34,7 +34,17 @@
 <a href="index.html">Back</a>
 </p>
 
-<div id="Derivada de la Función de Coste"><h2 id="Derivada de la Función de Coste" class="header"><a href="#Derivada de la Función de Coste">Derivada de la Función de Coste</a></h2></div>
+<div id="Derivada de la Función de Coste"><h1 id="Derivada de la Función de Coste" class="header"><a href="#Derivada de la Función de Coste">Derivada de la Función de Coste</a></h1></div>
+
+<hr>
+
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Derivada de la función de coste.html#Capa%20de%20salida">Capa de salida</a>
+
+</li></ul>
+<hr>
 
 <p>
 Sabemos que la función de coste:
