--- a/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Anexo/Ejemplo de retropropagación.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Anexo/Ejemplo de retropropagación.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Ejemplo de retropropagación.html#Capa%203">Capa 3</a>
+
+</li><li>
+<a href="Ejemplo de retropropagación.html#Capa%202">Capa 2</a>
+
+</li><li>
+<a href="Ejemplo de retropropagación.html#Capa%201">Capa 1</a>
+
+</li></ul>
+<hr>
+
 <p>
 Por ejemplo, supongamos que tenemos una red con tres capas, entonces \(k=3\), dado un ejemplo \(x_j\). En este caso tenemos que 
 </p>
