--- a/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Anexo/Explicación de la retropropagación.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Anexo/Explicación de la retropropagación.html
@@ -38,33 +38,30 @@
 
 <hr>
 
-<ol>
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
 <li>
-<a href="Explicación de la retropropagación.html#Explicación de la retropropagación-Descenso gradiente">Descenso Gradiente</a>
-
-<ol>
-<li>
-<a href="Explicación de la retropropagación.html#Explicación de la retropropagación-Descenso gradiente-Derivada del error">Derivada del Error</a>
-
-</li></ol>
-</li><li>
-<a href="Explicación de la retropropagación.html#Explicación de la retropropagación-Gradiente">Gradiente</a>
-
-<ol>
-<li>
-<a href="Explicación de la retropropagación.html#Explicación de la retropropagación-Gradiente-Capa de salida">Capa de salida</a>
+<a href="Explicación de la retropropagación.html#Descenso%20gradiente">Descenso gradiente</a>
 
 </li><li>
-<a href="Explicación de la retropropagación.html#Explicación de la retropropagación-Gradiente-Retropropagación del gradiente">Retropropagación del Gradiente</a>
+<a href="Explicación de la retropropagación.html#Derivada%20del%20error">Derivada del error</a>
 
 </li><li>
-<a href="Explicación de la retropropagación.html#Explicación de la retropropagación-Gradiente-Gradiente acumulado">Gradiente Acumulado</a>
+<a href="Explicación de la retropropagación.html#Gradiente">Gradiente</a>
 
 </li><li>
-<a href="Explicación de la retropropagación.html#Explicación de la retropropagación-Gradiente-Derivadas de las funciones de activación">Derivadas de las Funciones de Activación</a>
+<a href="Explicación de la retropropagación.html#Capa%20de%20salida">Capa de salida</a>
 
-</li></ol>
-</li></ol>
+</li><li>
+<a href="Explicación de la retropropagación.html#Retropropagaci%F3n%20del%20gradiente">Retropropagaci n del gradiente</a>
+
+</li><li>
+<a href="Explicación de la retropropagación.html#Gradiente%20acumulado">Gradiente acumulado</a>
+
+</li><li>
+<a href="Explicación de la retropropagación.html#Derivadas%20de%20las%20funciones%20de%20activaci%F3n">Derivadas de las funciones de activaci n</a>
+
+</li></ul>
 <hr>
 
 <p>
