--- a/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Neural Networks.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Neural Networks.html
@@ -38,6 +38,104 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Neural Networks.html#Architecture">Architecture</a>
+
+</li><li>
+<a href="Neural Networks.html#Algorithm">Algorithm</a>
+
+</li><li>
+<a href="Neural Networks.html#Output%20Layer">Output Layer</a>
+
+</li><li>
+<a href="Neural Networks.html#Sigmoid">Sigmoid</a>
+
+</li><li>
+<a href="Neural Networks.html#Softmax">Softmax</a>
+
+</li><li>
+<a href="Neural Networks.html#ReLU">ReLU</a>
+
+</li><li>
+<a href="Neural Networks.html#Loss%20Function">Loss Function</a>
+
+</li><li>
+<a href="Neural Networks.html#Forward%20Propagation">Forward Propagation</a>
+
+</li><li>
+<a href="Neural Networks.html#Parameters">Parameters</a>
+
+</li><li>
+<a href="Neural Networks.html#Outputs">Outputs</a>
+
+</li><li>
+<a href="Neural Networks.html#Graphical%20Representation">Graphical Representation</a>
+
+</li><li>
+<a href="Neural Networks.html#Optimization%20Problem">Optimization Problem</a>
+
+</li><li>
+<a href="Neural Networks.html#Loss%20Function">Loss Function</a>
+
+</li><li>
+<a href="Neural Networks.html#Optimization">Optimization</a>
+
+</li><li>
+<a href="Neural Networks.html#Back-propagation">Back-propagation</a>
+
+</li><li>
+<a href="Neural Networks.html#Output%20Layer">Output Layer</a>
+
+</li><li>
+<a href="Neural Networks.html#Hidden%20Layers">Hidden Layers</a>
+
+</li><li>
+<a href="Neural Networks.html#Vectorization">Vectorization</a>
+
+</li><li>
+<a href="Neural Networks.html#Output%20Layer">Output Layer</a>
+
+</li><li>
+<a href="Neural Networks.html#Hidden%20Layer">Hidden Layer</a>
+
+</li><li>
+<a href="Neural Networks.html#Graphical%20Representation">Graphical Representation</a>
+
+</li><li>
+<a href="Neural Networks.html#Improving%20a%20Neural%20Network">Improving a Neural Network</a>
+
+</li><li>
+<a href="Neural Networks.html#Activation%20Functions">Activation Functions</a>
+
+</li><li>
+<a href="Neural Networks.html#Initialization%20Techniques">Initialization Techniques</a>
+
+</li><li>
+<a href="Neural Networks.html#Vanishing%2FExploding%20Gradients">Vanishing Exploding Gradients</a>
+
+</li><li>
+<a href="Neural Networks.html#Intuition">Intuition</a>
+
+</li><li>
+<a href="Neural Networks.html#Initialization%20Techniques">Initialization Techniques</a>
+
+</li><li>
+<a href="Neural Networks.html#Optimization">Optimization</a>
+
+</li><li>
+<a href="Neural Networks.html#Mini%20Batch%20Gradient%20Descent">Mini Batch Gradient Descent</a>
+
+</li><li>
+<a href="Neural Networks.html#Momentum%20Algorithm">Momentum Algorithm</a>
+
+</li><li>
+<a href="Neural Networks.html#Anexo">Anexo</a>
+
+</li></ul>
+<hr>
+
 <ol>
 <li>
 <a href="Neural Networks.html#Neural Networks-Architecture">Architecture</a>
