--- a/src/Notes/DataScience/ML/StanfordCoursera/Regresión Logística.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/Regresión Logística.html
@@ -38,6 +38,29 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Regresión Logística.html#Descripci%F3n%20de%20los%20datos">Descripci n de los datos</a>
+
+</li><li>
+<a href="Regresión Logística.html#Hip%F3tesis">Hip tesis</a>
+
+</li><li>
+<a href="Regresión Logística.html#Funcion%20de%20coste">Funcion de coste</a>
+
+</li><li>
+<a href="Regresión Logística.html#Regularizaci%F3n">Regularizaci n</a>
+
+</li><li>
+<a href="Regresión Logística.html#Descenso%20gradiente">Descenso gradiente</a>
+
+</li><li>
+<a href="Regresión Logística.html#Regularizaci%F3n">Regularizaci n</a>
+
+</li></ul>
+<hr>
+
 <div id="Regresión Logística-Descripción de los datos"><h2 id="Descripción de los datos" class="header"><a href="#Regresión Logística-Descripción de los datos">Descripción de los datos</a></h2></div>
 
 <ul>
