--- a/src/Notes/DataScience/ML/StanfordCoursera/SVM/Functional Margin.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/SVM/Functional Margin.html
@@ -38,6 +38,23 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Functional Margin.html#Intuition">Intuition</a>
+
+</li><li>
+<a href="Functional Margin.html#Formal%20Definition">Formal Definition</a>
+
+</li><li>
+<a href="Functional Margin.html#Evaluation">Evaluation</a>
+
+</li><li>
+<a href="Functional Margin.html#Normalizing%20the%20Functional%20Margin">Normalizing the Functional Margin</a>
+
+</li></ul>
+<hr>
+
 <div id="Functional Margin-Intuition"><h3 id="Intuition" class="header"><a href="#Functional Margin-Intuition">Intuition</a></h3></div>
 
 <p>
