--- a/src/Notes/DataScience/ML/StanfordCoursera/Sistemas de Recomendación.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/Sistemas de Recomendación.html
@@ -38,6 +38,32 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Sistemas de Recomendación.html#Content%20Based%20Recommendations">Content Based Recommendations</a>
+
+</li><li>
+<a href="Sistemas de Recomendación.html#Funci%F3n%20de%20coste">Funci n de coste</a>
+
+</li><li>
+<a href="Sistemas de Recomendación.html#Descenso%20Gradiente">Descenso Gradiente</a>
+
+</li><li>
+<a href="Sistemas de Recomendación.html#Collaborative%20Filtering">Collaborative Filtering</a>
+
+</li><li>
+<a href="Sistemas de Recomendación.html#Problema%20de%20Optimizaci%F3n">Problema de Optimizaci n</a>
+
+</li><li>
+<a href="Sistemas de Recomendación.html#Algoritmo">Algoritmo</a>
+
+</li><li>
+<a href="Sistemas de Recomendación.html#Buscar%20%EDtems%20Relacionados">Buscar  tems Relacionados</a>
+
+</li></ul>
+<hr>
+
 <p>
 Dados los parámetros:
 </p>
