--- a/src/Notes/DataScience/Robotics/AIRobotics/ParticleFilters/Particle Filters.html
+++ b/src/Notes/DataScience/Robotics/AIRobotics/ParticleFilters/Particle Filters.html
@@ -38,29 +38,36 @@
 
 <hr>
 
-<ol>
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
 <li>
-<a href="Particle Filters.html#Particle Filters-Properties">Properties</a>
+<a href="Particle Filters.html#Properties">Properties</a>
 
 </li><li>
-<a href="Particle Filters.html#Particle Filters-Introduction">Introduction</a>
+<a href="Particle Filters.html#Introduction">Introduction</a>
 
 </li><li>
-<a href="Particle Filters.html#Particle Filters-Initial Probability">Initial Probability</a>
+<a href="Particle Filters.html#Initial%20Probability">Initial Probability</a>
 
 </li><li>
-<a href="Particle Filters.html#Particle Filters-Resampling">Resampling</a>
+<a href="Particle Filters.html#Resampling">Resampling</a>
 
 </li><li>
-<a href="Particle Filters.html#Particle Filters-Motion">Motion</a>
+<a href="Particle Filters.html#Motion">Motion</a>
 
 </li><li>
-<a href="Particle Filters.html#Particle Filters-Algorithm">Algorithm</a>
+<a href="Particle Filters.html#Algorithm">Algorithm</a>
 
 </li><li>
-<a href="Particle Filters.html#Particle Filters-Resampling Example">Resampling Example</a>
+<a href="Particle Filters.html#Measurement%20Updates">Measurement Updates</a>
 
-</li></ol>
+</li><li>
+<a href="Particle Filters.html#Motion%20Updates">Motion Updates</a>
+
+</li><li>
+<a href="Particle Filters.html#Resampling%20Example">Resampling Example</a>
+
+</li></ul>
 <hr>
 
 <div id="Particle Filters-Properties"><h2 id="Properties" class="header"><a href="#Particle Filters-Properties">Properties</a></h2></div>
