--- a/src/Notes/DataScience/Robotics/OnlineTrainingMobileRobotics/BayesFilter/Bayes Filter.html
+++ b/src/Notes/DataScience/Robotics/OnlineTrainingMobileRobotics/BayesFilter/Bayes Filter.html
@@ -38,37 +38,42 @@
 
 <hr>
 
-<ol>
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
 <li>
-<a href="Bayes Filter.html#Bayes Filter-State Estimation">State Estimation</a>
+<a href="Bayes Filter.html#State%20Estimation">State Estimation</a>
 
 </li><li>
-<a href="Bayes Filter.html#Bayes Filter-Recursive State Estimation">Recursive State Estimation</a>
+<a href="Bayes Filter.html#Recursive%20State%20Estimation">Recursive State Estimation</a>
 
 </li><li>
-<a href="Bayes Filter.html#Bayes Filter-Recursive Bayes Filter">Recursive Bayes Filter</a>
-
-<ol>
-<li>
-<a href="Bayes Filter.html#Bayes Filter-Recursive Bayes Filter-Intuition">Intuition</a>
+<a href="Bayes Filter.html#Recursive%20Bayes%20Filter">Recursive Bayes Filter</a>
 
 </li><li>
-<a href="Bayes Filter.html#Bayes Filter-Recursive Bayes Filter-Derivation">Derivation</a>
+<a href="Bayes Filter.html#Intuition">Intuition</a>
 
 </li><li>
-<a href="Bayes Filter.html#Bayes Filter-Recursive Bayes Filter-Prediction and Correction Step">Prediction and Correction Step</a>
+<a href="Bayes Filter.html#Derivation">Derivation</a>
 
 </li><li>
-<a href="Bayes Filter.html#Bayes Filter-Recursive Bayes Filter-Implementation">Implementation</a>
-
-</li></ol>
-</li><li>
-<a href="Bayes Filter.html#Bayes Filter-Popular Filters">Popular Filters</a>
+<a href="Bayes Filter.html#Prediction%20and%20Correction%20Step">Prediction and Correction Step</a>
 
 </li><li>
-<a href="Bayes Filter.html#Bayes Filter-Model Examples">Model Examples</a>
+<a href="Bayes Filter.html#Implementation">Implementation</a>
 
-</li></ol>
+</li><li>
+<a href="Bayes Filter.html#Popular%20Filters">Popular Filters</a>
+
+</li><li>
+<a href="Bayes Filter.html#Model%20Examples">Model Examples</a>
+
+</li><li>
+<a href="Bayes Filter.html#Motion%20model">Motion model</a>
+
+</li><li>
+<a href="Bayes Filter.html#Measurement%20model">Measurement model</a>
+
+</li></ul>
 <hr>
 
 <div id="Bayes Filter-State Estimation"><h2 id="State Estimation" class="header"><a href="#Bayes Filter-State Estimation">State Estimation</a></h2></div>
