--- a/src/Notes/DataScience/Robotics/OnlineTrainingMobileRobotics/KalmanFilter/Extended Kalman Filter.html
+++ b/src/Notes/DataScience/Robotics/OnlineTrainingMobileRobotics/KalmanFilter/Extended Kalman Filter.html
@@ -38,39 +38,36 @@
 
 <hr>
 
-<ol>
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
 <li>
-<a href="Extended Kalman Filter.html#Extended Kalman Filter-Introduction">Introduction</a>
+<a href="Extended Kalman Filter.html#Introduction">Introduction</a>
 
 </li><li>
-<a href="Extended Kalman Filter.html#Extended Kalman Filter-Local Linearization">Local Linearization</a>
-
-<ol>
-<li>
-<a href="Extended Kalman Filter.html#Extended Kalman Filter-Local Linearization-Jacobian">Jacobian</a>
+<a href="Extended Kalman Filter.html#Local%20Linearization">Local Linearization</a>
 
 </li><li>
-<a href="Extended Kalman Filter.html#Extended Kalman Filter-Local Linearization-Error Under Local Linearization">Error Under Local Linearization</a>
-
-</li></ol>
-</li><li>
-<a href="Extended Kalman Filter.html#Extended Kalman Filter-Linearized Motion Model">Linearized Motion Model</a>
+<a href="Extended Kalman Filter.html#Jacobian">Jacobian</a>
 
 </li><li>
-<a href="Extended Kalman Filter.html#Extended Kalman Filter-Linearized Observation Model">Linearized Observation Model</a>
+<a href="Extended Kalman Filter.html#Error%20Under%20Local%20Linearization">Error Under Local Linearization</a>
 
 </li><li>
-<a href="Extended Kalman Filter.html#Extended Kalman Filter-Algorithm">Algorithm</a>
+<a href="Extended Kalman Filter.html#Linearized%20Motion%20Model">Linearized Motion Model</a>
 
-<ol>
-<li>
-<a href="Extended Kalman Filter.html#Extended Kalman Filter-Algorithm-Kalman Gain">Kalman Gain</a>
-
-</li></ol>
 </li><li>
-<a href="Extended Kalman Filter.html#Extended Kalman Filter-Localization Example">Localization Example</a>
+<a href="Extended Kalman Filter.html#Linearized%20Observation%20Model">Linearized Observation Model</a>
 
-</li></ol>
+</li><li>
+<a href="Extended Kalman Filter.html#Algorithm">Algorithm</a>
+
+</li><li>
+<a href="Extended Kalman Filter.html#Kalman%20Gain">Kalman Gain</a>
+
+</li><li>
+<a href="Extended Kalman Filter.html#Localization%20Example">Localization Example</a>
+
+</li></ul>
 <hr>
 
 <div id="Extended Kalman Filter-Introduction"><h2 id="Introduction" class="header"><a href="#Extended Kalman Filter-Introduction">Introduction</a></h2></div>
