--- a/src/Notes/DataScience/Robotics/OnlineTrainingMobileRobotics/KalmanFilter/Kalman Filter.html
+++ b/src/Notes/DataScience/Robotics/OnlineTrainingMobileRobotics/KalmanFilter/Kalman Filter.html
@@ -38,40 +38,39 @@
 
 <hr>
 
-<ol>
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
 <li>
-<a href="Kalman Filter.html#Kalman Filter-Introduction">Introduction</a>
+<a href="Kalman Filter.html#Introduction">Introduction</a>
 
 </li><li>
-<a href="Kalman Filter.html#Kalman Filter-Properties of Gaussian Distributions">Properties of Gaussian Distributions</a>
+<a href="Kalman Filter.html#Properties%20of%20Gaussian%20Distributions">Properties of Gaussian Distributions</a>
 
 </li><li>
-<a href="Kalman Filter.html#Kalman Filter-Linear Model">Linear Model</a>
-
-<ol>
-<li>
-<a href="Kalman Filter.html#Kalman Filter-Linear Model-Models">Models</a>
+<a href="Kalman Filter.html#Linear%20Model">Linear Model</a>
 
 </li><li>
-<a href="Kalman Filter.html#Kalman Filter-Linear Model-Linear Motion Model">Linear Motion Model</a>
+<a href="Kalman Filter.html#Models">Models</a>
 
 </li><li>
-<a href="Kalman Filter.html#Kalman Filter-Linear Model-Linear Observation Model">Linear Observation Model</a>
-
-</li></ol>
-</li><li>
-<a href="Kalman Filter.html#Kalman Filter-Gaussian World">Gaussian World</a>
+<a href="Kalman Filter.html#Linear%20Motion%20Model">Linear Motion Model</a>
 
 </li><li>
-<a href="Kalman Filter.html#Kalman Filter-Representing the Belief">Representing the Belief</a>
+<a href="Kalman Filter.html#Linear%20Observation%20Model">Linear Observation Model</a>
 
 </li><li>
-<a href="Kalman Filter.html#Kalman Filter-Algorithm">Algorithm</a>
+<a href="Kalman Filter.html#Gaussian%20World">Gaussian World</a>
 
 </li><li>
-<a href="Kalman Filter.html#Kalman Filter-Assumptions">Assumptions</a>
+<a href="Kalman Filter.html#Representing%20the%20Belief">Representing the Belief</a>
 
-</li></ol>
+</li><li>
+<a href="Kalman Filter.html#Algorithm">Algorithm</a>
+
+</li><li>
+<a href="Kalman Filter.html#Assumptions">Assumptions</a>
+
+</li></ul>
 <hr>
 
 <p>
