--- a/src/Notes/DataScience/Robotics/OnlineTrainingMobileRobotics/OccpancyGridMaps/Occpancy Grid Maps.html
+++ b/src/Notes/DataScience/Robotics/OnlineTrainingMobileRobotics/OccpancyGridMaps/Occpancy Grid Maps.html
@@ -38,6 +38,59 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Occpancy Grid Maps.html#6.%20%23Occupancy%20Grid%20Maps-Inverse%20Sensor%20Model%20for%20Laser%20Range%20Finders%7CInverse%20Sensor%20Model%20for%20Laser%20Range%20Finders%7C6.%20%23Occupancy%20Grid%20Maps-Inverse%20Sensor%20Model%20for%20Laser%20Range%20Finders">Inverse Sensor Model for Laser Range Finders</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Introduction">Introduction</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Features%20vs%20Volumetric%20Maps">Features vs Volumetric Maps</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Description%20of%20the%20Mapping%20Task">Description of the Mapping Task</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Grid%20Maps">Grid Maps</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Assumptions">Assumptions</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Occupancy%20Probability">Occupancy Probability</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Notation">Notation</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Joint%20Distribution">Joint Distribution</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Estimating%20a%20Map%20from%20Data">Estimating a Map from Data</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Static%20State%20Binary%20Bayes%20Filter">Static State Binary Bayes Filter</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Odds%20Ratio">Odds Ratio</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Log%20Odds%20Notation">Log Odds Notation</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Algorithm">Algorithm</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Inverse%20Sensor%20Model%20for%20Laser%20Range%20Finders">Inverse Sensor Model for Laser Range Finders</a>
+
+</li><li>
+<a href="Occpancy Grid Maps.html#Example">Example</a>
+
+</li></ul>
+<hr>
+
 <ol>
 <li>
 <a href="Occpancy Grid Maps.html#Occupancy Grid Maps-Introduction">Introduction</a>
