--- a/src/Notes/DataScience/Robotics/OnlineTrainingMobileRobotics/ParticleFilter/Particle Filter.html
+++ b/src/Notes/DataScience/Robotics/OnlineTrainingMobileRobotics/ParticleFilter/Particle Filter.html
@@ -38,64 +38,57 @@
 
 <hr>
 
-<ol>
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
 <li>
-<a href="Particle Filter.html#Particle Filter-Intro">Intro</a>
+<a href="Particle Filter.html#Intro">Intro</a>
 
 </li><li>
-<a href="Particle Filter.html#Particle Filter-Particle Set">Particle Set</a>
+<a href="Particle Filter.html#Particle%20Set">Particle Set</a>
 
 </li><li>
-<a href="Particle Filter.html#Particle Filter-Particle Generation">Particle Generation</a>
-
-<ol>
-<li>
-<a href="Particle Filter.html#Particle Filter-Particle Generation-Gaussian Sampling">Gaussian Sampling</a>
+<a href="Particle Filter.html#Particle%20Generation">Particle Generation</a>
 
 </li><li>
-<a href="Particle Filter.html#Particle Filter-Particle Generation-Importance Sampling Principle">Importance Sampling Principle</a>
-
-</li></ol>
-</li><li>
-<a href="Particle Filter.html#Particle Filter-Characteristics">Characteristics</a>
+<a href="Particle Filter.html#Gaussian%20Sampling">Gaussian Sampling</a>
 
 </li><li>
-<a href="Particle Filter.html#Particle Filter-Algorithm">Algorithm</a>
+<a href="Particle Filter.html#Importance%20Sampling%20Principle">Importance Sampling Principle</a>
 
 </li><li>
-<a href="Particle Filter.html#Particle Filter-Summary">Summary</a>
+<a href="Particle Filter.html#Characteristics">Characteristics</a>
 
 </li><li>
-<a href="Particle Filter.html#Particle Filter-Monte Carlo Localization">Monte Carlo Localization</a>
-
-<ol>
-<li>
-<a href="Particle Filter.html#Particle Filter-Monte Carlo Localization-Structure">Structure</a>
+<a href="Particle Filter.html#Algorithm">Algorithm</a>
 
 </li><li>
-<a href="Particle Filter.html#Particle Filter-Monte Carlo Localization-Particle Filter Algorithm for Localization">Particle Filter Algorithm for Localization</a>
+<a href="Particle Filter.html#Summary">Summary</a>
 
 </li><li>
-<a href="Particle Filter.html#Particle Filter-Monte Carlo Localization-Example">Example</a>
-
-</li></ol>
-</li><li>
-<a href="Particle Filter.html#Particle Filter-Resampling Techniques">Resampling Techniques</a>
-
-<ol>
-<li>
-<a href="Particle Filter.html#Particle Filter-Resampling Techniques-Roulette Wheel">Roulette Wheel</a>
+<a href="Particle Filter.html#Monte%20Carlo%20Localization">Monte Carlo Localization</a>
 
 </li><li>
-<a href="Particle Filter.html#Particle Filter-Resampling Techniques-Low Variance Resampling">Low Variance Resampling</a>
+<a href="Particle Filter.html#Structure">Structure</a>
 
-<ol>
-<li>
-<a href="Particle Filter.html#Particle Filter-Resampling Techniques-Low Variance Resampling-Algorithm">Algorithm</a>
+</li><li>
+<a href="Particle Filter.html#Particle%20Filter%20Algorithm%20for%20Localization">Particle Filter Algorithm for Localization</a>
 
-</li></ol>
-</li></ol>
-</li></ol>
+</li><li>
+<a href="Particle Filter.html#Example">Example</a>
+
+</li><li>
+<a href="Particle Filter.html#Resampling%20Techniques">Resampling Techniques</a>
+
+</li><li>
+<a href="Particle Filter.html#Roulette%20wheel">Roulette wheel</a>
+
+</li><li>
+<a href="Particle Filter.html#Low%20Variance%20Resampling">Low Variance Resampling</a>
+
+</li><li>
+<a href="Particle Filter.html#Algorithm">Algorithm</a>
+
+</li></ul>
 <hr>
 
 <div id="Particle Filter-Intro"><h2 id="Intro" class="header"><a href="#Particle Filter-Intro">Intro</a></h2></div>
