--- a/src/Notes/ComputerScience/WebDev/Spring/Dependency Injection/Dependency Injection.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Dependency Injection/Dependency Injection.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Dependency Injection.html#Injection%20Types">Injection Types</a>
+
+</li></ul>
+<hr>
+
 <p>
 The dependencies of the objects are managed by the Spring container object factory:
 </p>
