--- a/src/Notes/ComputerScience/WebDev/Spring/Dependency Injection/Injecting Literal Values.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Dependency Injection/Injecting Literal Values.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Injecting Literal Values.html#Define%20the%20Attributes">Define the Attributes</a>
+
+</li><li>
+<a href="Injecting Literal Values.html#Configuration%20File">Configuration File</a>
+
+</li><li>
+<a href="Injecting Literal Values.html#Main%20Method">Main Method</a>
+
+</li></ul>
+<hr>
+
 <p>
 To inject concrete attributes into our beans:
 </p>
