--- a/src/Notes/ComputerScience/WebDev/Spring/Dependency Injection/Setter Injection.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Dependency Injection/Setter Injection.html
@@ -38,6 +38,23 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Setter Injection.html#Create%20Dependency%20Object">Create Dependency Object</a>
+
+</li><li>
+<a href="Setter Injection.html#Define%20dependency">Define dependency</a>
+
+</li><li>
+<a href="Setter Injection.html#Configuration%20File">Configuration File</a>
+
+</li><li>
+<a href="Setter Injection.html#Main%20Method">Main Method</a>
+
+</li></ul>
+<hr>
+
 <p>
 Inject dependencies by calling setter methods on your class
 </p>
