--- a/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Inversion of Control.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Inversion of Control.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Inversion of Control.html#Enable%20Component%20Scanning">Enable Component Scanning</a>
+
+</li><li>
+<a href="Inversion of Control.html#Add%20%60%40Component%60%20Annotation%20to%20Classes">Add   Component  Annotation to Classes</a>
+
+</li><li>
+<a href="Inversion of Control.html#Main%20Method">Main Method</a>
+
+</li></ul>
+<hr>
+
 <p>
 Let's see how to make us of Inversion of Control with Annotations:
 </p>
