--- a/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Life Cycles.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Java Annotations/Life Cycles.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Life Cycles.html#Notes">Notes</a>
+
+</li></ul>
+<hr>
+
 <p>
 To define methods to add when the beans is constructed or destroyed we use the <code>PostConstruct</code> and <code>PreDestroy</code> annotation.
 </p>
