--- a/src/Notes/ComputerScience/WebDev/Spring/MVC/Drop Down Lists.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/MVC/Drop Down Lists.html
@@ -38,6 +38,23 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Drop Down Lists.html#Controller">Controller</a>
+
+</li><li>
+<a href="Drop Down Lists.html#View">View</a>
+
+</li><li>
+<a href="Drop Down Lists.html#Model">Model</a>
+
+</li><li>
+<a href="Drop Down Lists.html#Country%20options%20from%20a%20properties%20file">Country options from a properties file</a>
+
+</li></ul>
+<hr>
+
 <p>
 To pass and bind data from drop down lists to controllers an another views we use the <code>Form Tags</code> <code>form:select</code> that encloses a set of options represented with <code>form:option</code> tags. And all these are surrounded by a <code>form:form</code>:
 </p>
