--- a/src/Notes/ComputerScience/WebDev/Spring/MVC/Text Fields.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/MVC/Text Fields.html
@@ -38,6 +38,20 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Text Fields.html#Controller">Controller</a>
+
+</li><li>
+<a href="Text Fields.html#View">View</a>
+
+</li><li>
+<a href="Text Fields.html#Model">Model</a>
+
+</li></ul>
+<hr>
+
 <p>
 To pass and bind data from input text fields to controllers an another views we use the <code>Form Tag</code> <code>form:input</code> along with <code>form:form</code>:
 </p>
