--- a/src/Notes/ComputerScience/WebDev/Spring/Spring Framework.html
+++ b/src/Notes/ComputerScience/WebDev/Spring/Spring Framework.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Spring Framework.html#Spring%20Projects">Spring Projects</a>
+
+</li></ul>
+<hr>
+
 <p>
 Components:
 </p>
