--- a/src/Notes/DataScience/ML/StanfordCoursera/Aprendizaje Online.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/Aprendizaje Online.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Aprendizaje Online.html#Ejemplo">Ejemplo</a>
+
+</li></ul>
+<hr>
+
 <p>
 En estos tipos de problemas se generan datos de forma continua, tal que para cada nuevo dato:
 </p>
