--- a/src/Notes/DataScience/ML/StanfordCoursera/Ecuación Normal.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/Ecuación Normal.html
@@ -38,6 +38,32 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Ecuación Normal.html#Descripci%F3n%20de%20los%20datos">Descripci n de los datos</a>
+
+</li><li>
+<a href="Ecuación Normal.html#Hip%F3tesis">Hip tesis</a>
+
+</li><li>
+<a href="Ecuación Normal.html#Funcion%20de%20coste">Funcion de coste</a>
+
+</li><li>
+<a href="Ecuación Normal.html#Regularizaci%F3n">Regularizaci n</a>
+
+</li><li>
+<a href="Ecuación Normal.html#Minimizaci%F3n%20del%20coste">Minimizaci n del coste</a>
+
+</li><li>
+<a href="Ecuación Normal.html#Regularizaci%F3n">Regularizaci n</a>
+
+</li><li>
+<a href="Ecuación Normal.html#Anotaciones">Anotaciones</a>
+
+</li></ul>
+<hr>
+
 <div id="Ecuación Normal-Descripción de los datos"><h2 id="Descripción de los datos" class="header"><a href="#Ecuación Normal-Descripción de los datos">Descripción de los datos</a></h2></div>
 
 <ul>
