--- a/src/Notes/DataScience/ML/StanfordCoursera/SVM/Geometric Margin.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/SVM/Geometric Margin.html
@@ -38,6 +38,23 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Geometric Margin.html#Intuition">Intuition</a>
+
+</li><li>
+<a href="Geometric Margin.html#Euclidean%20distance%20to%20the%20decision%20boundary">Euclidean distance to the decision boundary</a>
+
+</li><li>
+<a href="Geometric Margin.html#Formal%20definition">Formal definition</a>
+
+</li><li>
+<a href="Geometric Margin.html#Evaluation">Evaluation</a>
+
+</li></ul>
+<hr>
+
 <div id="Geometric Margin-Intuition"><h3 id="Intuition" class="header"><a href="#Geometric Margin-Intuition">Intuition</a></h3></div>
 
 <p>
