--- a/src/Notes/DataScience/ML/StanfordCoursera/SVM/Optimal Margin Classifier.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/SVM/Optimal Margin Classifier.html
@@ -38,6 +38,17 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Optimal Margin Classifier.html#Train%20the%20Classifier">Train the Classifier</a>
+
+</li><li>
+<a href="Optimal Margin Classifier.html#Classify%20an%20example">Classify an example</a>
+
+</li></ul>
+<hr>
+
 <p>
 We use this classifier to categorize datasets that are perfectly separable, that is to say, we use it over data that is linearly separable. This classifier will help us find the green line we saw in the geometric margin.
 </p>
