--- a/src/Study/CS/Languages and Compilers.html
+++ b/src/Study/CS/Languages and Compilers.html
@@ -34,8 +34,16 @@
 <a href="index.html">Back</a>
 </p>
 
-<div id="Languages and Compilers"><h2 id="Languages and Compilers" class="header"><a href="#Languages and Compilers">Languages and Compilers</a></h2></div>
+<div id="Languages and Compilers"><h1 id="Languages and Compilers" class="header"><a href="#Languages and Compilers">Languages and Compilers</a></h1></div>
 
+<hr>
+
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="Languages and Compilers.html#Notes">Notes</a>
+
+</li></ul>
 <hr>
 
 <table>
